--- a/css/about.css
+++ b/css/about.css
@@ -547,6 +547,7 @@
  
  .gallery > input:checked {
     transform: translateY(calc(1.75*var(--s))) scale(.5) rotate(225deg);
+         transform-origin: center; /* Ensure the transformation origin is centered */
     --b: 70%;
   }
   
