--- a/css/style.css
+++ b/css/style.css
@@ -1444,7 +1444,7 @@ padding-top: 6rem;
         padding-left: 5rem;
         text-align: left;
         font-size: 1.5rem;
-        color: var(--light-black);
+        color: var(--black);
         line-height: 2;
         padding: 1rem;
         }
